# ccb-py

./: .gitignore  README.md  TODO.md  TODO_PROGRESS.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.omc/: project-memory.json
.omc/sessions/: 086f3257-6209-4f5f-aac8-564f8f91965d.json  ce62d8a7-6ee9-4c77-a603-14a739fb7c08.json  cf53cde0-e358-4268-a3c3-f67ff54f3477.json
.omc/state/: agent-replay-76fd650e-0b8b-44a5-90a1-670b62cbf90f.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-05-04T17-14-11-916Z.json  checkpoint-2026-05-04T17-55-17-450Z.json  checkpoint-2026-05-05T01-49-02-627Z.json  checkpoint-2026-05-05T05-23-58-889Z.json  checkpoint-2026-05-05T12-17-12-918Z.json
src/ccb/: __init__.py  __main__.py  acp_protocol.py  agent_context.py  agent_defs.py  agent_summary.py  analytics_tracker.py  at_mentions.py  auto_dream.py  bridge.py  buddy_impl.py  capabilities.py  cli.py  client.py  commands.py  compact.py  compaction.py  config.py  context_collapse.py  context_policy.py  coordinator.py  cost.py  cost_tracker.py  cron.py  cron_scheduler.py  cron_tasks.py  cron_tasks_lock.py  daemon_proc.py  daemon_socket.py  desktop_app.py  desktop_controller.py  display.py  events.py  feature_flags.py  git_ops.py  github_ops.py  guardrails.py  hooks.py  http_server.py  images.py  (+52 more)
src/ccb/api/: __init__.py  anthropic_provider.py  base.py  router.py  (+4 more)
tests/: conftest.py  test_acp.py  test_analytics.py  test_ask_user.py  test_bridge.py  test_cli_desktop.py  test_compact.py  test_computer_tools.py  test_config.py  test_context_management.py  test_context_policy.py  test_cron_scheduler.py  test_data_input.py  test_desktop_controller.py  test_display_summary.py  test_e2e_integration.py  test_enterprise_integrations.py  test_git_ops.py  test_github_ops.py  test_hooks.py  test_http_server.py  test_loop_tool_validation.py  test_mcp.py  test_mcp_server.py  test_memory.py  test_misc_modules.py  test_networking.py  test_new_modules.py  test_oauth.py  test_permissions.py  test_phase2_workflow_persistence.py  test_phase3_swarm_broker.py  test_remote_debug.py  test_repl_input.py  test_sandbox.py  test_sdk_integration.py  test_session.py  test_session_repository.py  test_session_runtime.py  test_state_proactive.py  (+4 more)
(+38 files in other folders)
