[project]
name = "ccb"
version = "0.1.0"
description = "Claude Code CLI - Python rewrite"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52.0",
    "openai>=1.82.0",
    "rich>=13.9.0",
    "prompt-toolkit>=3.0.50",
    "click>=8.1.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "httpx-sse>=0.4.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[project.scripts]
ccb-py = "ccb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccb"]

[tool.ruff]
line-length = 100
target-version = "py311"
