[project]
name = "ccb"
version = "0.1.0"
description = "Claude Code CLI - A fast, extensible AI coding assistant with multi-provider support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "hua123an" },
]
keywords = ["ai", "cli", "coding-assistant", "claude", "openai", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.97.0",
    "openai>=2.32.0",
    "rich>=13.9.0",
    "prompt-toolkit>=3.0.50",
    "click>=8.1.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "httpx-sse>=0.4.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
agents = ["openai-agents>=0.14.0", "claude-agent-sdk>=0.1.60"]
gemini = ["google-genai>=1.0.0"]
bedrock = ["boto3>=1.35.0"]

[project.urls]
Homepage = "https://github.com/hua123an/ccb-py"
Repository = "https://github.com/hua123an/ccb-py"
Issues = "https://github.com/hua123an/ccb-py/issues"

[project.scripts]
ccb-py = "ccb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccb"]

[tool.ruff]
line-length = 100
target-version = "py311"
